syntax = "proto3";
package server_example;

message NoArguments {}

message HiddenData {
    string message = 1;
}

message PublicData {
    string message = 1;
}

service ServerExample {
    rpc GetHiddenData(NoArguments) returns (HiddenData) {};
    rpc GetHiddenStreamData(NoArguments) returns (stream HiddenData) {};
    rpc GetPublicData(NoArguments) returns (PublicData) {};
}